--- a/src/components/Header/Lowereader.module.css
+++ b/src/components/Header/Lowereader.module.css
@@ -5,6 +5,10 @@
   display: flex;
   align-items: center;
   gap: 20px;
+     z-index: 100;
+  position: sticky;
+  top: 40px;
+
 }
 
 /* Hamburger button */
