--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,9 +3,11 @@
   color: #fff;
   position: sticky;
   top: 0;
-  z-index: 50;
   font-size: 14px;
   width: 100%;
+   z-index: 300;
+     position: sticky;
+
 }
 
 /* Group logo + delivery */
