--- a/src/components/Carousel/carousel.module.css
+++ b/src/components/Carousel/carousel.module.css
@@ -10,8 +10,10 @@
 
 .carouselImage {
   width: 100%;
-  height: 400px;          
-  object-fit: contain;   
+  max-width: 100%;
+  height: 420px;          
+  /* object-fit: contain;   */
+   object-fit: auto;  
   display: block;
   background: #fff;
 }
@@ -37,7 +39,7 @@
 
   .carouselWrapper::after {
     height: 80px;
-  }
+}
 }
 
 @media (max-width: 480px) {
