--- a/src/components/Carousel/carousel.module.css
+++ b/src/components/Carousel/carousel.module.css
@@ -1,21 +1,24 @@
 .carouselWrapper {
   width: 100%;
-  max-width: 1500px; 
+  max-width: 90%; 
   margin: 0 auto;
   position: relative;
   overflow: hidden;
   z-index: 1;
   margin-top: 0; 
+
 }
 
 .carouselImage {
-  width: 100%;
-  max-width: 100%;
-  height: 420px;          
+  width: auto;
+  max-width: auto;
+  /* height:400px;           */
   /* object-fit: contain;   */
    object-fit: auto;  
   display: block;
   background: #fff;
+    margin: 0 auto;
+
 }
 
 /* Fade effect at bottom */
