--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,9 +5,7 @@
   top: 0;
   font-size: 14px;
   width: 100%;
-   z-index: 300;
-     position: sticky;
-
+  z-index: 300;
 }
 
 /* Group logo + delivery */
@@ -17,7 +15,6 @@
   gap: 8px;
   justify-content: flex-start;
   width: auto;
-  
 }
 
 /* Top bar */
@@ -36,6 +33,7 @@
   object-fit: contain;
   cursor: pointer;
 }
+
 .logo a:hover {
   background: #37475a;
   border-radius: 8px;
@@ -50,10 +48,12 @@
   font-size: 12px;
   line-height: 1.2;
 }
+
 .delivery span {
   font-weight: 600;
   color: #fff;
 }
+
 .delivery:hover {
   border: 1px solid #fff;
 }
@@ -65,15 +65,14 @@
   align-items: center;
   max-width: 900px;
 }
+
 .search select {
   padding: 9.9px;
-  
   border: none;
   border-radius: 1px 0 0 4px;
-  /* background: #f3f3f3; */
-    background: #febd69;
-
+  background: #febd69;
 }
+
 .searchInput {
   flex: 1;
   padding: 10px;
@@ -81,6 +80,7 @@
   outline: none;
   color: #febd69;
 }
+
 .searchBtn {
   padding: 6px 12px;
   background: #febd69;
@@ -90,14 +90,17 @@
   display: flex;
   align-items: center;
 }
+
 .searchBtn:hover {
   background: #f8c684;
   color: #fff;
 }
+
 .searchInput:focus {
   border: 1px solid #f8c684;
   outline: none;
 }
+
 .search:focus-within {
   border: 1px solid #ebc088;
 }
@@ -108,23 +111,42 @@
   align-items: center;
   gap: 16px;
 }
+
 .right a {
   color: #fff;
   text-decoration: none;
   font-size: 12px;
 }
+
 .account,
 .orders {
   line-height: 1.2;
 }
+
 .right a:hover {
   border: 1px solid #fff;
 }
+
+/* Cart */
 .cart {
-  font-weight: bold;
-  font-size: 16px;
+  position: relative;
   display: flex;
   align-items: center;
+  color: white;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.cartCount {
+  position: absolute;
+  top: -8px;
+  right: -8px;
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  padding: 2px 6px;
+  font-size: 12px;
+  font-weight: bold;
 }
 
 /* Language selector */
@@ -133,12 +155,14 @@
   align-items: center;
   gap: 4px;
 }
+
 .lang img {
   width: 20px;
   height: 14px;
   object-fit: cover;
   border: 1px solid #ddd;
 }
+
 .lang:hover {
   border: 1px solid #fff;
 }
@@ -151,21 +175,18 @@
     text-align: center;
   }
 
-  /* Row 1: logo + delivery side by side */
   .logoDelivery {
     justify-content: center;
     width: 100%;
     margin-bottom: 6px;
   }
 
-  /* Row 2: search full width */
   .search {
     order: 2;
     width: 100%;
     margin: 6px 0;
   }
 
-  /* Row 3: right section */
   .right {
     order: 3;
     justify-content: space-around;
