--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,22 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+@font-face {
+  font-family: 'Amazon Ember';
+  src: url('/src/assets/fonts/AmazonEmber-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Amazon Ember';
+  src: url('/src/assets/fonts/AmazonEmber-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+
+body {
+  font-family: 'Amazon Ember', sans-serif;
+}
