--- a/src/components/Pages/CategoryPage/CategoryPage.module.css
+++ b/src/components/Pages/CategoryPage/CategoryPage.module.css
@@ -34,6 +34,10 @@
   font-size: 16px;
   margin: 10px 0;
 }
+.link {
+  text-decoration: none;
+  color: inherit;
+}
 
 .price {
   font-weight: bold;
